# monorepo

./: .bazelignore  .bazelrc  .gitignore  .ruff.toml  BUILD.bazel  CLAUDE.md  MODULE.bazel  README.md  WORKSPACE  alembic.ini  go.mod
.github/workflows/: ci.yml  main.yml
bazel/: lint.bzl
bazel/go/: BUILD.bazel  deps.bzl  go.mod
bazel/python/: BUILD.bazel  alembic.bzl  defs.bzl  gazelle_python.yaml  packages.in  requirements.txt
bazel/python/pytest/: BUILD.bazel  defs.bzl  wrapper.py
bazel/swift/: macros.bzl
bazel/tools/: BUILD.bazel
budget_app/: BUILD.bazel  README.md
budget_app/app/: BUILD.bazel  BudgetApp.swift
budget_app/app/Storage/: DataStore.swift
budget_app/app/Views/: AddCategoryView.swift  CategoriesView.swift  ContentView.swift
budget_app/resources/: Info.plist
budget_app/tests/: BUILD.bazel
git/: BUILD.bazel  main.go
projects/bookshelf/: README.md
projects/bookshelf/main/: BUILD.bazel  __main__.py  api.py  books.py  db.py  errors.py
projects/bookshelf/postgres/: BUILD.bazel  README.md
projects/bookshelf/tests/: BUILD.bazel  test_api.py
projects/bookshelf/tutorial/: BUILD.bazel  __main__.py  api.py  db.py  errors.py
projects/budget_app/: BUILD.bazel  README.md
projects/budget_app/app/: BUILD.bazel
projects/budget_app/app/Models/: Category.swift  Transaction.swift
projects/budget_app/app/Views/: ReportsView.swift  TransactionsView.swift
projects/budget_app/resources/: BUILD.bazel
projects/budget_app/tests/: BUILD.bazel  DataStoreTests.swift
projects/concord/: README.md
projects/concord/app/: BUILD.bazel  __main__.py  api.py  db.py  models.py  schema.py
projects/concord/app/common/: BUILD.bazel  config.py  db.py  models.py  oath2.py  types.py  utils.py
projects/concord/app/projects/: BUILD.bazel  models.py  router.py  schema.py
projects/concord/app/users/: BUILD.bazel  models.py  router.py  schema.py
projects/concord/db/alembic/: BUILD.bazel  env.py
projects/concord/db/alembic/versions/: 036e18fcc65b_create_posts_table.py  47a046bd6b95_create_posts_table.py  561b4ae1e7cd_add_foreign_key_to_projects_table.py  BUILD.bazel  f13d6347876c_create_users_table.py
projects/concord/db/postgres/: BUILD.bazel  README.md
projects/concord/tests/: BUILD.bazel  test_crud.py
projects/git/: BUILD.bazel
projects/leetcode/lru_cache/: BUILD.bazel  README.md  solution.py  test_solution.py
projects/plans/: gt.md
