load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "git_lib",
    srcs = ["main.go"],
    importpath = "github.com/yourusername/monorepo/git",
    visibility = ["//visibility:private"],
    deps = [
        "@com_github_spf13_cobra//:go_default_library",
    ],
)

go_binary(
    name = "binary",
    embed = [":git_lib"],
    visibility = ["//visibility:public"],
)
