load("@bazel_skylib//rules:copy_file.bzl", "copy_file")
load("@rules_multirun//:defs.bzl", "command")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

package(default_visibility = ["//visibility:public"])

copy_file(
    name = "ruff_bin",
    src = "@aspect_rules_lint//format:ruff",
    out = "ruff-bin",
    is_executable = True,
)

command(
    name = "ruff-format",
    arguments = [
        "format",
    ],
    command = ":ruff_bin",
    run_from_workspace_root = True,
)

command(
    name = "ruff-fix",
    arguments = [
        "check",
        "--fix",
    ],
    command = ":ruff_bin",
    run_from_workspace_root = True,
)

py_console_script_binary(
    name = "alembic_bin",
    pkg = "@pypi//alembic",
    script = "alembic",
)

command(
    name = "alembic",
    command = ":alembic_bin",
    run_from_workspace_root = True,
)
