load("@build_bazel_rules_swift//swift:swift.bzl", "swift_library")

filegroup(
    name = "src",
    srcs = glob(["**/*.swift"]),
    visibility = ["//visibility:public"],
)

filegroup(
    name = "src_test",
    srcs = glob(
        ["**/*.swift"],
        exclude = ["BudgetApp.swift"],  # Exclude @main entry point for tests
    ),
    visibility = ["//visibility:public"],
)

swift_library(
    name = "lib",
    srcs = [":src"],
    visibility = ["//visibility:public"],
)

swift_library(
    name = "lib_test",
    # If your library has dependencies, list them here.
    # For testing with `@testable import BudgetAppLib`,
    # it's often helpful to mark the library as testonly:
    testonly = True,
    srcs = [":src_test"],
    module_name = "BudgetAppLib",
    visibility = ["//visibility:public"],
)
