load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "app",
    srcs = [
        "api.py",
        "db.py",
        "models.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pypi//fastapi",
        "@pypi//pydantic",
        "@pypi//sqlalchemy",
        "@pypi//psycopg2_binary"
    ],
)

py_binary(
    name = "app_bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        ":app",
        "@pypi//uvicorn",
    ],
)
