load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "app",
    srcs = [
        "api.py",
        "db.py",
        "models.py",
        "schema.py",
        "utils.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pypi//email_validator",  #keep
        "@pypi//fastapi",
        "@pypi//passlib",
        "@pypi//psycopg2_binary",  #keep
        "@pypi//pydantic",
        "@pypi//sqlalchemy",
    ],
)

py_binary(
    name = "app_bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        ":app",
        "@pypi//uvicorn",
    ],
)
