load("@rules_python//python:defs.bzl", "py_binary", "py_library")

py_library(
    name = "app",
    srcs = ["api.py"],
    visibility = ["//:__subpackages__"],
    deps = [
        "//projects/concord/app/common",
        "//projects/concord/app/projects",
        "//projects/concord/app/users",
        "@pypi//email_validator",  #keep
        "@pypi//fastapi",
        "@pypi//psycopg2_binary",  #keep
    ],
)

py_binary(
    name = "app_bin",
    srcs = ["__main__.py"],
    main = "__main__.py",
    visibility = ["//:__subpackages__"],
    deps = [
        ":app",
        "@pypi//uvicorn",
    ],
)
