load("@rules_python//python:defs.bzl", "py_library")

py_library(
    name = "common",
    srcs = [
        "db.py",
        "models.py",
        "oath2.py",
        "types.py",
        "utils.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "@pypi//fastapi",
        "@pypi//passlib",
        "@pypi//pydantic",
        "@pypi//python_jose",
        "@pypi//sqlalchemy",
    ],
)
