load("@rules_multirun//:defs.bzl", "command")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")

py_library(
    name = "alembic",
    srcs = [
        "__init__.py",
        "env.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//projects/concord/app/common",
        "@pypi//alembic",
        "@pypi//psycopg2_binary",  #keep
        "@pypi//sqlalchemy",
    ],
)

py_console_script_binary(
    name = "alembic_bin",
    pkg = "@pypi//alembic",
    script = "alembic",
    deps = ["//projects/concord/db/alembic"],
)

command(
    name = "bin",
    command = ":alembic_bin",
    run_from_workspace_root = True,
)
