load("@rules_multirun//:defs.bzl", "command")
load("@rules_python//python:defs.bzl", "py_library")
load("@rules_python//python/entry_points:py_console_script_binary.bzl", "py_console_script_binary")
load("//bazel/python:defs.bzl", "alembic")

py_library(
    name = "alembic",
    srcs = [
        "__init__.py",
        "env.py",
    ],
    visibility = ["//:__subpackages__"],
    deps = [
        "//projects/concord/app/common",
        "@pypi//alembic",
        "@pypi//psycopg2_binary",  #keep
        "@pypi//sqlalchemy",
    ],
)

alembic(
    name = "bin",
    config = "//projects/concord/db/alembic",
    versions = "//projects/concord/db/alembic/versions",
)
